correction erreurs page d'accueil - z-index

--- a/wp-content/themes/plantytheme/assets/css/theme.css
+++ b/wp-content/themes/plantytheme/assets/css/theme.css
@@ -326,9 +326,6 @@ footer {
 }
 
 .img-fleur1 {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
     z-index: 1;
     position: relative;
     left: 200px;
@@ -339,6 +336,7 @@ footer {
     width: 100%;
     position: absolute;
     z-index: 0;
+
 }
 
 .p-chez-planty-txt {
@@ -362,7 +360,6 @@ footer {
     background-image: url("/planty/wp-content/uploads/2024/01/curved-background3.png");
     background-size:100%;
     background-repeat: no-repeat;
-    z-index: 0;
     padding-bottom: 81px;
     margin-bottom: 66px;
 }
